# Wizard-jb2

./: .editorconfig  .gitignore  .gitlab-ci.yml  README.md
.github/workflows/: build_wizard.yml  main.yml
UI Mockups/: UI mockup.excalidraw
actions/: action.yml
app/: .eslintrc.json  eslint.config.mjs  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
app/src/: App.tsx  global.d.ts  index.css  index.tsx  toolbar.tsx
app/src/components/: Editor.tsx  MathNodeView.ts  toolbar.tsx  toolbar_alternative.tsx  toolbar_commands.ts
app/src/components/github/: BranchDropdown.tsx  GitHubAuthPanel.tsx  GitHubDropdown.tsx  GitHubTokenInput.tsx  GitHubUserPanel.tsx
app/src/components/popups/: popup_modal.tsx  popup_toast.tsx
app/src/components/toolbar/: HintTooltip.tsx  TableGridSelector.tsx  ToolbarButton.tsx  ToolbarDropdown.tsx  ToolbarHintButton.tsx  editor_plugins.ts  toolbar.tsx  toolbar_buttons.tsx  toolbar_utils.ts  (+4 more)
app/src/lib/: github.ts  prosemirror-schema.ts
app/tests/: App.test.tsx  Editor.test.tsx  index.test.tsx  parser.test.ts  parser_constants.ts
app/tests/components/: Editor.test.tsx
app/tests/lib/: database.test.ts  editor_plugin.test.tsx  githubInteraction.test.ts
app/tests/snapshot/: parse_example_1.json  parse_example_2.json
script/: start_wizard.js
sphinx_extension/: MANIFEST.in  pyproject.toml
sphinx_extension/extension_name/: __init__.py
sphinx_extension/extension_name/_static/: add_edit_button.js  add_editor.js  edit_button.js  main.js
sphinx_extension/teachbooks_software_project_extension_name/: __init__.py
sphinx_extension/teachbooks_software_project_extension_name/_static/: add_editor.js  main.js
(+37 files in other folders)
