[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teachbooks_software_project_extension_name"
version = "0.1.1"
description = "A extension for editing TeachBooks"
authors = [{ name = "Leander Bindt", email = "l.bindt@student.tudelft.nl" }]
dependencies = ["sphinx", "docutils"]

