[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# TODO: Pick a name
name = "teachbooks_software_project_extension_name"
# Make sure to match this version with main.js and __init__.py
version = "0.1.3"
description = "A extension for editing TeachBooks"
authors = [{ name = "Leander Bindt", email = "l.bindt@student.tudelft.nl" }]
dependencies = ["sphinx", "docutils"]

